src/App/StudioPage/ObjectsBar/ObjectsBar.scss
.objects-bar {
  .custom-paper {
    color: #fff;
    background-color: #2f2f2f;
    height: 130px;
    width: 100%;
    display: grid;
    grid-auto-flow: column;
    grid-gap: 5em;
    align-items: center;
    padding-left: 2em;
    grid-auto-columns: max-content;

    .object {
      height: 90px;
      width: 90px;
      display: grid;
      align-items: center;
      justify-content: center;
      padding: 0.5em;
      text-align: center;
      border-radius: 45px;
      box-shadow: 0 0 4px rgba($color: #000000, $alpha: 0.4);
      transition: 0.3s;
      &:hover {
        transform: scale(1.1);
        cursor: pointer;
      }
    }

    .sphere {
      background: url("/assets/w-sphere.png") !important;
      background-repeat: no-repeat !important;
      background-position: center !important;
      background-size: contain !important;
    }

    .lSphere {
      background: url("/assets/l-sphere.png") !important;
      background-repeat: no-repeat !important;
      background-position: center !important;
      background-size: contain !important;
    }

    .klight {
      background: url("/assets/k-light.png") !important;
      background-repeat: no-repeat !important;
      background-position: center !important;
      background-size: cover !important;
    }
    .dlight {
      background: url("/assets/d-light.png") !important;
      background-repeat: no-repeat !important;
      background-position: center !important;
      background-size: cover !important;
    }
    .blight {
      background: url("/assets/b-light.png") !important;
      background-repeat: no-repeat !important;
      background-position: center !important;
      background-size: cover !important;
    }
    .pground {
      background: url("/assets/p-ground.png") !important;
      background-repeat: no-repeat !important;
      background-position: center !important;
      background-size: cover !important;
    }
    .pwall {
      background: url("/assets/p-wall.png") !important;
      background-repeat: no-repeat !important;
      background-position: center !important;
      background-size: cover !important;
    }
    .purple {
      background-color: purple;
    }
  }
}

